<resources>
    <string name="app_name">RecipeApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="emailInvalidate">Email Invalidate</string>
    <string name="current_version">version : 1.0</string>
    <string name="recipe">Recipe</string>
    <string name="search">Search</string>
    <string name="lucky">Lucky</string>
    <string name="favorite">Favorite</string>
    <string name="header_recipe">What do you want to eat today?</string>
    <string name="recent_recipes">Recent recipes</string>
    <string name="hello">Hello</string>
    <string name="vegan">Vegan</string>
</resources>